@@ -129,6 +129,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16270: urllib may hang when used for retrieving files via FTP by using
+  a context manager.  Patch by Giampaolo Rodola'.
+
 - Issue #16176: Properly identify Windows 8 via platform.platform()
 
 - Issue #16114: The subprocess module no longer provides a misleading
